--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -606,6 +606,114 @@ m4trace:/usr/share/aclocal/ltdl.m4:815: -1- AU_DEFUN([AC_LTDL_DLSYM_USCORE], [m4
 m4trace:/usr/share/aclocal/ltdl.m4:815: -1- AC_DEFUN([AC_LTDL_DLSYM_USCORE], [AC_DIAGNOSE([obsolete], [The macro `AC_LTDL_DLSYM_USCORE' is obsolete.
 You should run autoupdate.])dnl
 m4_if($#, 0, [LT_FUNC_DLSYM_USCORE], [LT_FUNC_DLSYM_USCORE($@)])])
+m4trace:/usr/share/aclocal/pkg.m4:27: -1- AC_DEFUN([PKG_PROG_PKG_CONFIG], [m4_pattern_forbid([^_?PKG_[A-Z_]+$])
+m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
+m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
+AC_ARG_VAR([PKG_CONFIG], [path to pkg-config utility])
+AC_ARG_VAR([PKG_CONFIG_PATH], [directories to add to pkg-config's search path])
+AC_ARG_VAR([PKG_CONFIG_LIBDIR], [path overriding pkg-config's built-in search path])
+
+if test "x$ac_cv_env_PKG_CONFIG_set" != "xset"; then
+	AC_PATH_TOOL([PKG_CONFIG], [pkg-config])
+fi
+if test -n "$PKG_CONFIG"; then
+	_pkg_min_version=m4_default([$1], [0.9.0])
+	AC_MSG_CHECKING([pkg-config is at least version $_pkg_min_version])
+	if $PKG_CONFIG --atleast-pkgconfig-version $_pkg_min_version; then
+		AC_MSG_RESULT([yes])
+	else
+		AC_MSG_RESULT([no])
+		PKG_CONFIG=""
+	fi
+fi[]dnl
+])
+m4trace:/usr/share/aclocal/pkg.m4:60: -1- AC_DEFUN([PKG_CHECK_EXISTS], [AC_REQUIRE([PKG_PROG_PKG_CONFIG])dnl
+if test -n "$PKG_CONFIG" && \
+    AC_RUN_LOG([$PKG_CONFIG --exists --print-errors "$1"]); then
+  m4_default([$2], [:])
+m4_ifvaln([$3], [else
+  $3])dnl
+fi])
+m4trace:/usr/share/aclocal/pkg.m4:86: -1- AC_DEFUN([_PKG_SHORT_ERRORS_SUPPORTED], [AC_REQUIRE([PKG_PROG_PKG_CONFIG])
+if $PKG_CONFIG --atleast-pkgconfig-version 0.20; then
+        _pkg_short_errors_supported=yes
+else
+        _pkg_short_errors_supported=no
+fi[]dnl
+])
+m4trace:/usr/share/aclocal/pkg.m4:106: -1- AC_DEFUN([PKG_CHECK_MODULES], [AC_REQUIRE([PKG_PROG_PKG_CONFIG])dnl
+AC_ARG_VAR([$1][_CFLAGS], [C compiler flags for $1, overriding pkg-config])dnl
+AC_ARG_VAR([$1][_LIBS], [linker flags for $1, overriding pkg-config])dnl
+
+pkg_failed=no
+AC_MSG_CHECKING([for $1])
+
+_PKG_CONFIG([$1][_CFLAGS], [cflags], [$2])
+_PKG_CONFIG([$1][_LIBS], [libs], [$2])
+
+m4_define([_PKG_TEXT], [Alternatively, you may set the environment variables $1[]_CFLAGS
+and $1[]_LIBS to avoid the need to call pkg-config.
+See the pkg-config man page for more details.])
+
+if test $pkg_failed = yes; then
+   	AC_MSG_RESULT([no])
+        _PKG_SHORT_ERRORS_SUPPORTED
+        if test $_pkg_short_errors_supported = yes; then
+	        $1[]_PKG_ERRORS=`$PKG_CONFIG --short-errors --print-errors --cflags --libs "$2" 2>&1`
+        else 
+	        $1[]_PKG_ERRORS=`$PKG_CONFIG --print-errors --cflags --libs "$2" 2>&1`
+        fi
+	# Put the nasty error message in config.log where it belongs
+	echo "$$1[]_PKG_ERRORS" >&AS_MESSAGE_LOG_FD
+
+	m4_default([$4], [AC_MSG_ERROR(
+[Package requirements ($2) were not met:
+
+$$1_PKG_ERRORS
+
+Consider adjusting the PKG_CONFIG_PATH environment variable if you
+installed software in a non-standard prefix.
+
+_PKG_TEXT])[]dnl
+        ])
+elif test $pkg_failed = untried; then
+     	AC_MSG_RESULT([no])
+	m4_default([$4], [AC_MSG_FAILURE(
+[The pkg-config script could not be found or is too old.  Make sure it
+is in your PATH or set the PKG_CONFIG environment variable to the full
+path to pkg-config.
+
+_PKG_TEXT
+
+To get pkg-config, see <http://pkg-config.freedesktop.org/>.])[]dnl
+        ])
+else
+	$1[]_CFLAGS=$pkg_cv_[]$1[]_CFLAGS
+	$1[]_LIBS=$pkg_cv_[]$1[]_LIBS
+        AC_MSG_RESULT([yes])
+	$3
+fi[]dnl
+])
+m4trace:/usr/share/aclocal/pkg.m4:169: -1- AC_DEFUN([PKG_INSTALLDIR], [m4_pushdef([pkg_default], [m4_default([$1], ['${libdir}/pkgconfig'])])
+m4_pushdef([pkg_description],
+    [pkg-config installation directory @<:@]pkg_default[@:>@])
+AC_ARG_WITH([pkgconfigdir],
+    [AS_HELP_STRING([--with-pkgconfigdir], pkg_description)],,
+    [with_pkgconfigdir=]pkg_default)
+AC_SUBST([pkgconfigdir], [$with_pkgconfigdir])
+m4_popdef([pkg_default])
+m4_popdef([pkg_description])
+])
+m4trace:/usr/share/aclocal/pkg.m4:189: -1- AC_DEFUN([PKG_NOARCH_INSTALLDIR], [m4_pushdef([pkg_default], [m4_default([$1], ['${datadir}/pkgconfig'])])
+m4_pushdef([pkg_description],
+    [pkg-config arch-independent installation directory @<:@]pkg_default[@:>@])
+AC_ARG_WITH([noarch-pkgconfigdir],
+    [AS_HELP_STRING([--with-noarch-pkgconfigdir], pkg_description)],,
+    [with_noarch_pkgconfigdir=]pkg_default)
+AC_SUBST([noarch_pkgconfigdir], [$with_noarch_pkgconfigdir])
+m4_popdef([pkg_default])
+m4_popdef([pkg_description])
+])
 m4trace:/usr/share/aclocal-1.13/amversion.m4:14: -1- AC_DEFUN([AM_AUTOMAKE_VERSION], [am__api_version='1.13'
 dnl Some users find AM_AUTOMAKE_VERSION and mistake it for a way to
 dnl require some minimum version.  Point them to the right macro.
@@ -2259,114 +2367,6 @@ m4trace:m4/lt~obsolete.m4:93: -1- AC_DEFUN([_LT_AC_PROG_CXXCPP])
 m4trace:m4/lt~obsolete.m4:96: -1- AC_DEFUN([_LT_PROG_F77])
 m4trace:m4/lt~obsolete.m4:97: -1- AC_DEFUN([_LT_PROG_FC])
 m4trace:m4/lt~obsolete.m4:98: -1- AC_DEFUN([_LT_PROG_CXX])
-m4trace:m4/pkg.m4:27: -1- AC_DEFUN([PKG_PROG_PKG_CONFIG], [m4_pattern_forbid([^_?PKG_[A-Z_]+$])
-m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
-m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
-AC_ARG_VAR([PKG_CONFIG], [path to pkg-config utility])
-AC_ARG_VAR([PKG_CONFIG_PATH], [directories to add to pkg-config's search path])
-AC_ARG_VAR([PKG_CONFIG_LIBDIR], [path overriding pkg-config's built-in search path])
-
-if test "x$ac_cv_env_PKG_CONFIG_set" != "xset"; then
-	AC_PATH_TOOL([PKG_CONFIG], [pkg-config])
-fi
-if test -n "$PKG_CONFIG"; then
-	_pkg_min_version=m4_default([$1], [0.9.0])
-	AC_MSG_CHECKING([pkg-config is at least version $_pkg_min_version])
-	if $PKG_CONFIG --atleast-pkgconfig-version $_pkg_min_version; then
-		AC_MSG_RESULT([yes])
-	else
-		AC_MSG_RESULT([no])
-		PKG_CONFIG=""
-	fi
-fi[]dnl
-])
-m4trace:m4/pkg.m4:60: -1- AC_DEFUN([PKG_CHECK_EXISTS], [AC_REQUIRE([PKG_PROG_PKG_CONFIG])dnl
-if test -n "$PKG_CONFIG" && \
-    AC_RUN_LOG([$PKG_CONFIG --exists --print-errors "$1"]); then
-  m4_default([$2], [:])
-m4_ifvaln([$3], [else
-  $3])dnl
-fi])
-m4trace:m4/pkg.m4:86: -1- AC_DEFUN([_PKG_SHORT_ERRORS_SUPPORTED], [AC_REQUIRE([PKG_PROG_PKG_CONFIG])
-if $PKG_CONFIG --atleast-pkgconfig-version 0.20; then
-        _pkg_short_errors_supported=yes
-else
-        _pkg_short_errors_supported=no
-fi[]dnl
-])
-m4trace:m4/pkg.m4:106: -1- AC_DEFUN([PKG_CHECK_MODULES], [AC_REQUIRE([PKG_PROG_PKG_CONFIG])dnl
-AC_ARG_VAR([$1][_CFLAGS], [C compiler flags for $1, overriding pkg-config])dnl
-AC_ARG_VAR([$1][_LIBS], [linker flags for $1, overriding pkg-config])dnl
-
-pkg_failed=no
-AC_MSG_CHECKING([for $1])
-
-_PKG_CONFIG([$1][_CFLAGS], [cflags], [$2])
-_PKG_CONFIG([$1][_LIBS], [libs], [$2])
-
-m4_define([_PKG_TEXT], [Alternatively, you may set the environment variables $1[]_CFLAGS
-and $1[]_LIBS to avoid the need to call pkg-config.
-See the pkg-config man page for more details.])
-
-if test $pkg_failed = yes; then
-   	AC_MSG_RESULT([no])
-        _PKG_SHORT_ERRORS_SUPPORTED
-        if test $_pkg_short_errors_supported = yes; then
-	        $1[]_PKG_ERRORS=`$PKG_CONFIG --short-errors --print-errors --cflags --libs "$2" 2>&1`
-        else 
-	        $1[]_PKG_ERRORS=`$PKG_CONFIG --print-errors --cflags --libs "$2" 2>&1`
-        fi
-	# Put the nasty error message in config.log where it belongs
-	echo "$$1[]_PKG_ERRORS" >&AS_MESSAGE_LOG_FD
-
-	m4_default([$4], [AC_MSG_ERROR(
-[Package requirements ($2) were not met:
-
-$$1_PKG_ERRORS
-
-Consider adjusting the PKG_CONFIG_PATH environment variable if you
-installed software in a non-standard prefix.
-
-_PKG_TEXT])[]dnl
-        ])
-elif test $pkg_failed = untried; then
-     	AC_MSG_RESULT([no])
-	m4_default([$4], [AC_MSG_FAILURE(
-[The pkg-config script could not be found or is too old.  Make sure it
-is in your PATH or set the PKG_CONFIG environment variable to the full
-path to pkg-config.
-
-_PKG_TEXT
-
-To get pkg-config, see <http://pkg-config.freedesktop.org/>.])[]dnl
-        ])
-else
-	$1[]_CFLAGS=$pkg_cv_[]$1[]_CFLAGS
-	$1[]_LIBS=$pkg_cv_[]$1[]_LIBS
-        AC_MSG_RESULT([yes])
-	$3
-fi[]dnl
-])
-m4trace:m4/pkg.m4:169: -1- AC_DEFUN([PKG_INSTALLDIR], [m4_pushdef([pkg_default], [m4_default([$1], ['${libdir}/pkgconfig'])])
-m4_pushdef([pkg_description],
-    [pkg-config installation directory @<:@]pkg_default[@:>@])
-AC_ARG_WITH([pkgconfigdir],
-    [AS_HELP_STRING([--with-pkgconfigdir], pkg_description)],,
-    [with_pkgconfigdir=]pkg_default)
-AC_SUBST([pkgconfigdir], [$with_pkgconfigdir])
-m4_popdef([pkg_default])
-m4_popdef([pkg_description])
-])
-m4trace:m4/pkg.m4:189: -1- AC_DEFUN([PKG_NOARCH_INSTALLDIR], [m4_pushdef([pkg_default], [m4_default([$1], ['${datadir}/pkgconfig'])])
-m4_pushdef([pkg_description],
-    [pkg-config arch-independent installation directory @<:@]pkg_default[@:>@])
-AC_ARG_WITH([noarch-pkgconfigdir],
-    [AS_HELP_STRING([--with-noarch-pkgconfigdir], pkg_description)],,
-    [with_noarch_pkgconfigdir=]pkg_default)
-AC_SUBST([noarch_pkgconfigdir], [$with_noarch_pkgconfigdir])
-m4_popdef([pkg_default])
-m4_popdef([pkg_description])
-])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -2701,40 +2701,40 @@ m4trace:configure.ac:47: -1- _AM_SUBST_NOTMAKE([SHELL_WRAPPER_FALSE])
 m4trace:configure.ac:48: -1- AM_COND_IF([SHELL_WRAPPER], [AC_MSG_FAILURE([Fatal Error: cannot find jpeg development library. Is it installed?])])
 m4trace:configure.ac:49: -1- m4_pattern_allow([^LIBJPEG_CFLAGS$])
 m4trace:configure.ac:50: -1- m4_pattern_allow([^LIBJPEG_LIBS$])
-m4trace:configure.ac:51: -1- PKG_CHECK_MODULES([OPENCV4], [opencv4 >= 4.0.0], [HAVE_OPENCV=true], [AC_MSG_FAILURE([Fatal Error: Cannot find opencv4 development libraries. Are they installed?])])
+m4trace:configure.ac:51: -1- PKG_CHECK_MODULES([OPENCV4], [opencv4 >= 4.0], [HAVE_OPENCV=true], [AC_MSG_FAILURE([Fatal Error: Cannot find opencv4 development libraries. Are they installed? If you compiled opencv4 manually you will probably need to manually specify opencv4 pkgconfig creation with cmake -D OPENCV_GENERATE_PKGCONFIG=YES. After building with make, you will probably need to manually copy the opencv.pc4 file over into /usr/local/lib/pkgconfig or wherever your local pkgconfig files are!])])
 m4trace:configure.ac:51: -1- m4_pattern_allow([^OPENCV4_CFLAGS$])
 m4trace:configure.ac:51: -1- m4_pattern_allow([^OPENCV4_LIBS$])
-m4trace:configure.ac:51: -1- PKG_CHECK_EXISTS([opencv4 >= 4.0.0], [pkg_cv_[]OPENCV4_CFLAGS=`$PKG_CONFIG --[]cflags "opencv4 >= 4.0.0" 2>/dev/null`
+m4trace:configure.ac:51: -1- PKG_CHECK_EXISTS([opencv4 >= 4.0], [pkg_cv_[]OPENCV4_CFLAGS=`$PKG_CONFIG --[]cflags "opencv4 >= 4.0" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
-m4trace:configure.ac:51: -1- PKG_CHECK_EXISTS([opencv4 >= 4.0.0], [pkg_cv_[]OPENCV4_LIBS=`$PKG_CONFIG --[]libs "opencv4 >= 4.0.0" 2>/dev/null`
+m4trace:configure.ac:51: -1- PKG_CHECK_EXISTS([opencv4 >= 4.0], [pkg_cv_[]OPENCV4_LIBS=`$PKG_CONFIG --[]libs "opencv4 >= 4.0" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
 m4trace:configure.ac:51: -1- _PKG_SHORT_ERRORS_SUPPORTED
-m4trace:configure.ac:55: -1- PKG_CHECK_MODULES([LIBTIFF], [libtiff-4 >= 4.0], [
+m4trace:configure.ac:54: -1- PKG_CHECK_MODULES([LIBTIFF], [libtiff-4 >= 4.0], [
   my_tiff_cflags="$LIBTIFF_CFLAGS"
   my_tiff_libs="$LIBTIFF_LIBS"
   ], [my_tiff=0])
-m4trace:configure.ac:55: -1- m4_pattern_allow([^LIBTIFF_CFLAGS$])
-m4trace:configure.ac:55: -1- m4_pattern_allow([^LIBTIFF_LIBS$])
-m4trace:configure.ac:55: -1- PKG_CHECK_EXISTS([libtiff-4 >= 4.0], [pkg_cv_[]LIBTIFF_CFLAGS=`$PKG_CONFIG --[]cflags "libtiff-4 >= 4.0" 2>/dev/null`
+m4trace:configure.ac:54: -1- m4_pattern_allow([^LIBTIFF_CFLAGS$])
+m4trace:configure.ac:54: -1- m4_pattern_allow([^LIBTIFF_LIBS$])
+m4trace:configure.ac:54: -1- PKG_CHECK_EXISTS([libtiff-4 >= 4.0], [pkg_cv_[]LIBTIFF_CFLAGS=`$PKG_CONFIG --[]cflags "libtiff-4 >= 4.0" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
-m4trace:configure.ac:55: -1- PKG_CHECK_EXISTS([libtiff-4 >= 4.0], [pkg_cv_[]LIBTIFF_LIBS=`$PKG_CONFIG --[]libs "libtiff-4 >= 4.0" 2>/dev/null`
+m4trace:configure.ac:54: -1- PKG_CHECK_EXISTS([libtiff-4 >= 4.0], [pkg_cv_[]LIBTIFF_LIBS=`$PKG_CONFIG --[]libs "libtiff-4 >= 4.0" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
-m4trace:configure.ac:55: -1- _PKG_SHORT_ERRORS_SUPPORTED
-m4trace:configure.ac:60: -1- AM_CONDITIONAL([SHELL_WRAPPER2], [test "$my_tiff_libs" = "none" ])
-m4trace:configure.ac:60: -1- m4_pattern_allow([^SHELL_WRAPPER2_TRUE$])
-m4trace:configure.ac:60: -1- m4_pattern_allow([^SHELL_WRAPPER2_FALSE$])
-m4trace:configure.ac:60: -1- _AM_SUBST_NOTMAKE([SHELL_WRAPPER2_TRUE])
-m4trace:configure.ac:60: -1- _AM_SUBST_NOTMAKE([SHELL_WRAPPER2_FALSE])
-m4trace:configure.ac:61: -1- AM_COND_IF([SHELL_WRAPPER2], [AC_MSG_FAILURE([Fatal Error: cannot find libtiff development library. Is it installed?])])
-m4trace:configure.ac:62: -1- m4_pattern_allow([^LIBTIFF_CFLAGS$])
-m4trace:configure.ac:63: -1- m4_pattern_allow([^LIBTIFF_LIBS$])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:88: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:88: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:88: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:88: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:88: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
-m4trace:configure.ac:88: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
-m4trace:configure.ac:88: -1- _LT_PROG_LTMAIN
+m4trace:configure.ac:54: -1- _PKG_SHORT_ERRORS_SUPPORTED
+m4trace:configure.ac:59: -1- AM_CONDITIONAL([SHELL_WRAPPER2], [test "$my_tiff_libs" = "none" ])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^SHELL_WRAPPER2_TRUE$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^SHELL_WRAPPER2_FALSE$])
+m4trace:configure.ac:59: -1- _AM_SUBST_NOTMAKE([SHELL_WRAPPER2_TRUE])
+m4trace:configure.ac:59: -1- _AM_SUBST_NOTMAKE([SHELL_WRAPPER2_FALSE])
+m4trace:configure.ac:60: -1- AM_COND_IF([SHELL_WRAPPER2], [AC_MSG_FAILURE([Fatal Error: cannot find libtiff development library. Is it installed?])])
+m4trace:configure.ac:61: -1- m4_pattern_allow([^LIBTIFF_CFLAGS$])
+m4trace:configure.ac:62: -1- m4_pattern_allow([^LIBTIFF_LIBS$])
+m4trace:configure.ac:87: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:87: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:87: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:87: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:87: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:87: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:87: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:87: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
+m4trace:configure.ac:87: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:87: -1- _LT_PROG_LTMAIN
