--- a/README
+++ b/README
@@ -24,7 +24,7 @@
 # (windows/visual studio)
 
 # ----------------------------------------------------------------------------
-# METHOD 1 - Compiling olyvslideconv on Windows with msys2
+# METHOD 1 - Compiling olyvslideconv on Windows 8/10 with msys2
 # ----------------------------------------------------------------------------
 # Install MSYS2. Download the package from here: 
 # http://www.msys2.org/
@@ -52,6 +52,9 @@ pacman -S msys/pkg-config
 # Install libtiff:
 pacman -S mingw64/mingw-w64-x86_64-libtiff
 
+# Install minizip:
+pacman -S mingw64/mingw-w64-x86_64-minizip2
+
 # Install opencv (this will also grab the libtiff and libjpeg-turbo 
 dependacies):
 pacman -S mingw64/mingw-w64-x86_64-opencv
@@ -64,132 +67,43 @@ pacman -S git
 git clone https://github.com/paulrichards321/olyvslideconv.git
 
 # Compile it by typing:
-mkdir olyvslideconv-build
-cmake ../olyvslideconv
+cd olyvslideconv
+mkdir build
+cd build
+cmake -G 'Unix Makefiles' ..
 make
-
-# Install the binary
-make install
 
 # You should have a executable olyvslideconv.exe. When moving the
 # executable to another system or not executing in a MSYS2 or Mingw shell 
 # you will need to also supply the MSYS2 dlls for opencv, libjpeg-turbo, 
 # and libtiff, and some other generic C/C++ runtime MSYS2 dlls.
 
-# ----------------------------------------------------------------------------
-# METHOD 2: Compiling olyvslideconv with Visual Studio 
-# (tested with Visual Studio 2015 on Windows 8.1 and Windows 10)
-# ----------------------------------------------------------------------------
-# --NOTE ABOUT VCVARS32.BAT, VCVARS64.BAT, CMAKE, AND ARCHITECTURE--
-# In the below instructions you will use a program called cmake and a Visual
-# Studio batch file called vcvars. Make sure when you set your architecture 
-# with cmake and vcvars that you use it consistently through all the packages
-#  you will have to build. There's vcvars32.bat and vcvars64.bat for the 
-# 32-bit and 64-bit versions. The AMD 64 bit version of Visual Studio 14 2015 
-# the vcvars bat file is in 
-"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\amd64\vcvars64.bat"
- 
-# --DOWNLOAD AND INSTALL CMAKE--
-# Download and install the windows binary package for cmake from 
-# https://cmake.org
-
-# --DOWNLOAD AND INSTALL NASM--
-# Download and install the windows binary package for nasm 
-# (x86/amd64 assembler) from 
-# https://www.nasm.us
-
-# --CONFIGURE NASM PATH--
-# Add the path of nasm.exe to your PATH environmental variables. Use the 
-# control panel, advanced system settings, save and then close and reopen 
-# your command window. Before you run cmake, make sure nasm is in the 
-# current PATH otherwise libjpeg-turbo will not build properly.
-
-# --DOWNLOAD AND BUILD LIBJPEG-TURBO--
-# Download libjpeg-turbo from https://libjpeg-turbo.org
-
-# Use cmake to configure libjpeg-turbo. You can use the gui or the command 
-# line, whatever you find easier. If you use the command line, cd into the 
-# extracted root directory of the source and create a build dir, then find
-# the location of your cmake.exe (see below for example) and use your 
-# version of Visual Studio and architecture (Visual Studio 2015 Win64 
-# shown below) and your version of MSBuild and type:
-cd libjpeg-turbo
-mkdir build
-cd build
-"C:\Program Files\cmake\bin\cmake.exe" -G "Visual Studio 14 2015 Win64" ..
-"C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" turbojpeg-static.vcxproj
-
-# Be careful with the double quotation marks and two dots after Win64 in the
-# above cmake command, they are needed.
-
-# --DOWNLOAD AND BUILD LIBTIFF-- 
-# I have successfully used version 4.0.7 and 4.0.9. The libtiff site is here: 
-# http://www.simplesystems.org/libtiff/
-# Unzip or untar the libtiff archive. You will need to edit the nmake.opt 
-# file in the tiff root directory to include jpeg support by specifying the
-# jpeg headers and resulting built jpeg library directory. You can search 
-# JPEG_SUPPORT and remove the # (pound sign) in front of the JPEG = lines:
-JPEG_SUPPORT = 1
-JPEGDIR = c:\source\libjpeg-turbo
-JPEG_INCLUDE = -Ic:\source\libjpeg-turbo\build -I$(JPEGDIR)
-JPEG_LIB = c:\source\libjpeg-turbo\build\Debug\turbojpeg-static.lib
-
-# After you edited the above four lines, then you can build libtiff using 
-# nmake. Open a command window and run the right vcvars bat file for your 
-# architecture and cd into the right version of libtiff that you 
-# downloaded by typing:
-"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\amd64\vcvars64.bat"
-cd tiff-4.0.9
-nmake /f Makefile.vc
-
-#--DOWNLOAD AND EXTRACT PREBUILT OPENCV--
-# Download and extract the opencv library for your version of Visual Studio:
-# https://opencv.org
-# There should be a version that is already built that just includes the header
-# files and library files.
-
-# --CONFIGURE INCLUDE AND LIB LOCATIONS FOR olyvslideconv--
-# Download the source for olyvslideconv via git or unzip or untar it. 
-# Run the vcvars bat file for your architecture and then with the 
-# command window still open cd into the olyvslideconv directory, 
-# then edit nmake.opt with your favorite editor and update the INCLUDE 
-# and LIB variables at the top of the file to point to the INCLUDE 
-# of the libjpeg-turbo build and source directory, the libtiff 
-# source directory, and the opencv include directory. Then modify (if needed) 
-# the location of the LIB files for libjpeg-turbo, libtiff, and opencv. The 
-# variables in nmake.opt that need to be tailored depending upon the versions 
-# of libtiff, libjpeg-turbo, and opencv are these:
-
-# --FINALLY! BUILD olyvslideconv--
-# Then type:
-"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\amd64\vcvars64.bat"
-cd olyvslideconv
-nmake /f Makefile.vc
-
-# --FINAL NOTES--
-# It should build without any errors, and olyvslideconv.exe and svsinfo.exe 
-# will be in the current directory.
-
-# You will also need the dll for opencv (at this point opencv_world342.dll) 
-# in the same directory as olyvslideconv.exe when you run it. 
-# The Visual C++ 2015 C/C++ Runtime Package (which will already be 
-# installed with the Compiler) might also be needed to run it.
-
-# If you are still lost, please be patient. I am going to script this whole 
-# process with PowerShell soon.
-
 # -----------------------------------------------------------------------------
-# METHOD 3: Compiling olyvslideconv on Redhat 7/CentOS 7/Scientific Linux
+# METHOD 2: Compiling olyvslideconv on Redhat/CentOS/Scientific Linux 8 or 7
 # -----------------------------------------------------------------------------
 # Install git and development tools if you haven't done so already
 sudo yum install git
 sudo yum groupinstall 'Development Tools'
 
-# Install libjpeg, libtiff, and ncurses by typing:
+# Install libjpeg, libtiff, and ncurses:
 sudo yum install libjpeg-turbo-devel libtiff-devel ncurses-devel
 
+# If on Redhat/CentOS/Scientific Linux 8 you can easily grab minizip
+sudo yum install minizip-devel
+
+# Otherwise if you are on version 7 or earlier you will need to build it
+# Follow the below block of instructions to build it if needed
+# otherwise safe to skip this part
+git clone https://github.com/nmoinvaz/minizip
+cd minizip
+mkdir build
+cd build
+cmake3 ..
+make
+sudo make install
+
 # -- BUILD OPENCV OR DOWNLOAD DEVELOPMENT RPM FOR IT --
-# You will need opencv >= 3. You can either find a place to grab or build it using these directions:
+# You will need opencv >= 4. You can either find a place to grab or build it using these directions:
 sudo yum install cmake pkgconfig
 sudo yum install libpng-devel jasper-devel openexr-devel libwebp-devel
 sudo yum install libdc1394-devel libv4l-devel gstreamer-plugins-base-devel
@@ -199,12 +113,12 @@ sudo yum install tbb-devel eigen3-devel
 git clone https://github.com/opencv/opencv.git
 cd opencv
 
-# Now specify a stable version of opencv. 3.4.3 works fine:
-git checkout 3.4.3
+# Now specify a stable version of opencv. 4.1.2 works fine:
+git checkout 4.1.2
 cd ..
 mkdir opencv-build
 cd opencv-build
-cmake3 -D CMAKE_BUILD_TYPE=RELEASE -D OPENCV_GENERATE_PKGCONFIG -D CMAKE_INSTALL_PREFIX=/usr/local ../opencv/
+cmake3 -D CMAKE_BUILD_TYPE=RELEASE -D OPENCV_GENERATE_PKGCONFIG ../opencv/
 make
 sudo make install
 
@@ -220,7 +134,7 @@ sudo ldconfig
 # Now go back to your olyvslideconv directory:
 cd ..
 
-# -- GRAB THE OLY2GMAP IF YOU HAVEN'T ALREADY AND COMPILE --
+# -- GRAB THE SOURCE IF YOU HAVEN'T ALREADY AND COMPILE --
 git clone https://github.com/paulrichards321/olyvslideconv.git
 mkdir olyvslideconv-build
 cd olyvslideconv-build
